# iPrune

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configs.py  main.c  requirements.txt  run-intermittently.py  test.sh  tflite_run.py  transform.py  utils.py
ARM-CMSIS/: download-extract-cmsis.sh
Tools/: control-power-supply.py  dvfs.h  minicom-launcher.py  myuart.c  our_misc.h  read-tek.py
Tools/ext_fram/: README.md  extfram.c  qspiFRAM.h
common/: c_callbacks.h  cnn_common.cpp  cnn_common.h  conv.cpp  gemm.cpp  intermittent-cnn.cpp  intermittent-cnn.h  my_debug.cpp  my_debug.h  my_dsplib.cpp  my_dsplib.h  op_handlers.cpp  op_utils.cpp  op_utils.h  plat-linux.cpp  plat-msp430.cpp  platform.cpp  platform.h  pooling.cpp
data/: maml.onnx
datasets/: HAR_Dataset.py  SpeechCommands_Dataset.py  __init__.py  input_data.py
debuger/: run-intermittently.py
inference-library/: CMakeLists.txt  TI-DSPLib.diff  configs.py  requirements.txt  transform.py  utils.py
inference-library/Tools/: README.md  dvfs.c  myuart.c  myuart.h  our_misc.s
inference-library/Tools/ext_fram/: extfram.h  qspiFRAM.c
inference-library/common/: cnn_common.cpp  cnn_common.h  conv.cpp  gemm.cpp  intermittent-cnn.cpp  my_debug.h  my_dsplib.cpp  my_dsplib.h  op_handlers.cpp  plat-linux.cpp  plat-msp430.cpp  platform.cpp  platform.h  pooling.cpp
inference-library/debuger/: original_model_run.py
inference-library/msp430/: .cproject  .project
inference-library/pruned_model/har/: data.cpp  data.h
inference-library/pruned_model/kws/: data.cpp  data.h
inference-library/pruned_model/msp430/har/: data.cpp  data.h
inference-library/pruned_model/msp430/kws/: data.cpp  data.h
inference-library/pruned_model/msp430/sqn/: data.cpp  data.h
inference-library/pruned_model/sqn/: data.cpp  data.h
msp430/: .cproject
msp432/: .cproject
pruning/: .prune.squeezenet.sh.swp  .run.har.sh.swp  config.py  main.py  prune.har.E_0.sh  prune.har.E_1.sh  prune.har.E_2.sh  prune.har.I_0.sh  prune.har.I_2.sh  prune.har.I_3.sh  prune.har.sena.sh  prune.har.sh  prune.har_R1.E_0.sh  prune.har_R1.E_1.sh  prune.har_R1.E_2.sh  prune.har_R1.E_3.sh  prune.har_R1.E_4.sh  prune.har_R1.E_5.sh  prune.har_R1.E_6.sh  prune.har_R1.I_0.sh  prune.har_R1.I_1.sh  prune.har_R1.I_2.sh  prune.har_R1.I_3.sh  prune.har_R1.I_4.sh  prune.har_R1.I_5.sh  prune.har_R1.I_6.sh  prune.har_R2.E_1.sh  prune.har_R2.E_3.sh  prune.har_R2.I_0.sh  prune.har_R2.I_1.sh  prune.har_R2.I_2.sh  prune.har_R3.E_2.sh  prune.har_R3.E_3.sh  prune.har_R3.I_1.sh  prune.har_R3.I_3.sh  prune.kws_cnn_s.E_0.sh  prune.kws_cnn_s.E_1.sh  prune.kws_cnn_s.E_2.sh  prune.kws_cnn_s.E_3.sh  prune.kws_cnn_s.I_0.sh  (+74 more)
pruning/Intermittent_Aware/: Sensitivity Analysis.ipynb  config.py  log.txt  log2.txt  main.py  open_onnx.py  open_ssh_tunnel.sh  plot.ipynb  prune.energy.lenet_5.sh  prune.energy.lenet_5_p.sh  prune.energy.squeezenet.sh  prune.har.sh  prune.intermittent.lenet_5.sh  prune.intermittent.lenet_5_p.sh  prune.intermittent.squeezenet.sh  prune.intermittent_with_sensitivity_lenet_5.sh  prune.kws.sh  prune.kws_cnn_s.sh  prune.lenet_5.sh  prune.lenet_5_p.sh  prune.mnist.sh  prune.squeezenet.sh  to_onnx.py
pruning/datasets/: HAR_Dataset.py  SpeechCommands_Dataset.py
pruning/har-test-1/: HAR.origin.pth.tar
pruning/intermittent_aware/: config.py  energy_profiler.py  main.py  prune.har.sh  prune.kws_cnn_s.sh  prune.squeezenet.sh  to_onnx.py
stm32/: .cproject  .mxproject  STM32L496AGIX_FLASH.ld  test.ioc  test.launch
utils/: export_squeezenet_cifar10.py
(+265 files in other folders)
